--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-}
-
 .app-container {
     display: flex;
     flex-direction: column;
     height: 100vh;
+}
+
+.container {
+    max-width: 1170px;
+    width: var(--container-max-width);
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 .content-area {
