--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: flex-start;
     width: 100%;
+    height: 100vh;
     padding: 20px;
     background-color: #ffffff;
     overflow-y: auto;
