--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 
+.main-content {
+    box-sizing: border-box;
+}
 
 body {
     font-family: "Roboto Flex", sans-serif;
