--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -13,6 +13,11 @@
     margin: 0;
 }
 
+.navigation-bar a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .nav-links {
     display: flex;
     gap: 15px;
